K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: rahul1994jh/commandservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: commandservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
